--- a/html/index.html
+++ b/html/index.html
@@ -10,16 +10,159 @@
 </head>
 
 <body>
-  <div class="container">
 
-  <h1 id="mainHeader">Carlos Lobera - Java Full-Stack Developer</h1>
-  <h3>About Me</h3>
-  <div class="aboutMe">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  <section class="fwh-slide1">
+    <nav class="navbar navbar-expand">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><strong>CCL</strong></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Me</a>
+            </li>
+            <!-- <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="">
+      <h1 class="mainPageHeader" id="mainHeader"><strong>CARLOS LOBERA</strong></h1>
+      <h2 class="mainPageHeader" id ="mainHeaderTwo" ><strong>JAVA FULL-STACK DEVELOPER</strong></h2>
+
+    </div>
+
+
+  </section>
+
+  <section class="fwh-slide2">
+
+
+
+
+
+
+
+  <div class="container text-center">
+      <div class="row gx-2">
+          <div class="col-xxl-12 addBorder">
+            <h3 class="aboutMe"><strong>About Me</strong></h3>
+          </div>
+      </div>
+
+      <div class="about__content">
+          <div class="row gx-2 abtRow">
+              <div class="col-xxl-8">
+               <div class="p-3">
+                 <p class="aboutme__paragraph">
+                   I'm a full stack developer that is devoted to the idea of lifelong
+                   learning and has a great love for JavaScript, React, and everything
+                   related to web development. My interest and passion for web development
+                   are driven by the special blend of creativity, logic, technology, and the
+                   never-ending search for new things to learn. I enjoy spending my free
+                   time traveling, creating art, and playing the guitar.
+                 </p>
+               </div>
+              </div>
+
+
+            <div class="col-xxl-4 addBorder">
+              <div class="p-3">
+                <div class="skills">
+
+
+                  <div class="skill__row">
+                      <div class="skills__item">
+                        <img src="images/java-Icon.png" alt="">
+                        <div class="skill__item-name">Java</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/html-icon.png" alt="">
+                        <div class="skill__item-name">HTML</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/css-Icon.png" alt="">
+                        <div class="skill__item-name">CSS</div>
+                      </div>
+                  </div>
+
+                  <div class="skill__row">
+                      <div class="skills__item">
+                        <img src="images/javascript-Icon.png" alt="">
+                        <div class="skill__item-name">JavaScript</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/git-Icon.png" alt="">
+                        <div class="skill__item-name">GIT</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/sql-Icon.png" alt="">
+                        <div class="skill__item-name">SQL</div>
+                      </div>
+                  </div>
+
+                  <div class="skill__row">
+                      <div class="skills__item">
+                        <img src="images/typescript-Icon.png" alt="">
+                        <div class="skill__item-name">TypeScript</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/angularjs-Icon.png" alt="">
+                        <div class="skill__item-name">Angular.JS</div>
+                      </div>
+
+                      <div class="skills__item">
+                        <img src="images/bootstrap-Icon.png" alt="">
+                        <div class="skill__item-name">BootStrap</div>
+                      </div>
+                  </div>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+
+
   </div>
 
-</div>
+
+
+
+  </section>
+
+
+
+
+
+
+
+
+
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
