change font/ font color/ background color

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="#anchor-projectSection">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#anchor-contactSection">Contact</a>
               </li>
             </ul>
           </div>
@@ -301,7 +301,7 @@
 
     <section class="contactSection">
       <div class="projectHeader">
-        <h3 class="aboutMe" id="anchor-projectSection">
+        <h3 class="aboutMe" id="anchor-contactSection">
           <strong>CONTACT INFORMATION</strong>
         </h3>
       </div>
