change font/ font color/ background color

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
     <section class="fwh-slide1">
       <nav class="navbar navbar-expand">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><strong>CCL</strong></a>
+          <a class="navbar-brand" href="#" style="color: #49ac7a;"><strong>CCL</strong></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -79,7 +79,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 addBorder p-4" style="margin-left: 50px">
+          <div class="col-lg-4 addBorder p-4">
             <div class="skills gx-2">
               <div class="skill__row">
                 <div class="skills__item">
@@ -210,7 +210,7 @@
               <a
                 href="http://18.232.244.192:8080/ItineraryShare/"
                 target="”_blank”"
-                >Itinerar Share</a
+                >Itinerary Share</a
               >
             </h1>
             <div class="postcard__subtitle small">Group Project</div>
